Clear the session string section

--- a/config/session.cfg
+++ b/config/session.cfg
@@ -1,10 +1,5 @@
-# Credentials of a client which users will connect to
 [CLIENT_CREDENTIALS]
-API_ID=id
-API_HASH=hash
+api_id = 3209697
+api_hash = f84b5bed7b6176cb36f6b044084e5e61
 
-# Session strings of users: pairs of "username=session_string"
 [SESSION_STRINGS]
-any_username=session_string_1
-another_username=session_string_2
-one_more_username=session_string_3
